# Asphylax

./: .gitignore  style_dark.qss
agent/: Cargo.toml  benchmark_run.py  crear_subconjunts.py  generar_dataset.py  memoria.tex  repomix-output.xml  signatures.json  timing_results.csv
agent/src/: main.rs
agent/src/communication/: mod.rs
agent/src/config/: mod.rs
agent/src/decision_engine/: mod.rs
agent/src/heuristics/: mod.rs
agent/src/history/: mod.rs
agent/src/models/: mod.rs
agent/src/monitor/: mod.rs
agent/src/partial_signatures/: mod.rs
agent/src/paths/: mod.rs
agent/src/pe_analysis/: mod.rs
agent/src/quarantine/: mod.rs
agent/src/scanner/: mod.rs
agent/src/signatures/: mod.rs
agent/src/updater/: mod.rs
agent/src/yara_engine/: mod.rs
client/: main.py  test_monitor.py
client/app/controllers/: config_controller.py  history_controller.py  monitor_controller.py  quarantine_controller.py  quick_scan_worker.py  scan_controller.py  scan_worker.py
client/gui/: prova.py  style_dark.qss  style_light.qss
data/: config.json  heuristics.json  patterns.json  quick_scan_cache.json  test_signatures.json  update_state.json  yara_rule_blacklist.json  yara_rules.yarc  yara_validation_report.csv
docs/: memoria.tex
history/: history.json
proves/: cmd.txt  download.txt  fitxer_malicios.txt  monitor_test.txt  prova.txt  ps1.txt  regex_test.txt  test_detect.txt  test_pattern.txt
proves/sub1/: base64.txt  combo.txt  prova.txt  url.txt
proves/yara/: mimikatz_test.txt  powershell_test.txt
scripts/: update_signatures.py  validate_yara_rules.py
(+8 files in other folders)
