[package]
name = "asphylax_agent"
version = "0.1.0"
edition = "2021"
default-run = "asphylax_agent"

[dependencies]
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
yara-x = "1.15.0"
rayon = "1"
pelite = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
bloomfilter = "1.0.1"
notify = "6.1.1"
walkdir = "2.5.0"
bincode = "1.3.3"

[profile.dev]
debug = 0
